update: some refactoring
